mobile navbar visible in desktop mode bug fix

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -82,7 +82,7 @@ section:nth-child(3) {
   margin-top: 0!important;
 }
 
-#mobile-navbar {
+#mobile-navbar,#mobile-navbar-fixed {
   display: none;
 }
 
